[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ObstacleSpawner/ObstacleSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Bird/Bird.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Ground/Ground.tscn" type="PackedScene" id=6]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

[node name="ObstacleSpawner" parent="." index="1" instance=ExtResource( 3 )]

[node name="StartObstacleSpawningTimeout" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="HUD" parent="." index="3" instance=ExtResource( 4 )]

[node name="Bird" parent="." index="4" instance=ExtResource( 5 )]

[node name="Ground" parent="." index="5" instance=ExtResource( 6 )]

[connection signal="score_point" from="ObstacleSpawner" to="." method="_on_ObstacleSpawner_score_point"]

[connection signal="timeout" from="StartObstacleSpawningTimeout" to="." method="_on_StartObstacleSpawningTimeout_timeout"]

[connection signal="restart" from="HUD" to="." method="_on_HUD_restart"]

[connection signal="death" from="Bird" to="." method="_on_Bird_death"]

[connection signal="start_flight" from="Bird" to="." method="_on_Bird_start_flight"]


